objects/SFDC_Budget_Entry__c.object
<CustomObject>
    <description>Rolls up to a MDF budget. Used show additions or removals to/ from a given budget</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount added/ removed from the budget for non-accrual entries</description>
        <inlineHelpText>The amount added/ removed from the budget for non-accrual entries</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>The budget the budget entry is allocated to</description>
        <label>Budget</label>
        <referenceTo>SFDC_Budget__c</referenceTo>
        <relationshipLabel>Budget Entries</relationshipLabel>
        <relationshipName>R00N30000002DjClEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Co_Op_Earned__c</fullName>
        <description>The earned % applied to the revenue. Used for accrual based budgets</description>
        <inlineHelpText>The earned % applied to the revenue. Used for accrual based budgets</inlineHelpText>
        <label>Co-Op Earned %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description about the budget entry</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>if( $RecordType.Id = &apos;012300000001reU&apos;, TODAY() + 180, null)</defaultValue>
        <description>Used to track when funds added to a budget expire and are no longer considered part of the available budget</description>
        <inlineHelpText>Set a date in the future for when funds added to the budget expire, and are no longer part of the available budget</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Co_Op_Earned__c</fullName>
        <description>The co-op earned in the given budget period for the chosen account</description>
        <inlineHelpText>The co-op earned in the given budget period for the chosen account</inlineHelpText>
        <label>Period Co-Op Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Revenue__c</fullName>
        <description>The revenue attributable to the budget account in the given time period</description>
        <inlineHelpText>The revenue attributable to the budget account in the given time period</inlineHelpText>
        <label>Period Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Period_Carry_Over__c</fullName>
        <description>The co-op carry-over accrual from the prior time period for the budget account</description>
        <inlineHelpText>The co-op carry-over accrual from the prior time period for the budget account</inlineHelpText>
        <label>Prior Period Carry Over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to track status of the funds. An approval process could be implemented to update this value or simply updated manually.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>The budget entry total including both accrual and non-accrual based entries</description>
        <formula>Amount__c + Period_Co_Op_Earned__c + Prior_Period_Carry_Over__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to classify budget entries by either an addition or removal from the given budget</description>
        <formula>if( Amount__c &gt;=0, &quot;Addition&quot;, &quot;Removal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Budget Entry</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Entries</pluralLabel>
    <recordTypes>
        <fullName>Accrual</fullName>
        <active>true</active>
        <description>Used to record accrual type budget entries</description>
        <label>Accrual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Used to add/ remove discretionary funding</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_NE_Zero</fullName>
        <active>true</active>
        <description>Used to control that the budget entry amount cannot be zero</description>
        <errorConditionFormula>Amount__c =0</errorConditionFormula>
        <errorMessage>The budget entry amount must be either a positive or negative number</errorMessage>
    </validationRules>
</CustomObject>